update swagger and collections
